removed unnecessary files and added README

--- a/package.json
+++ b/package.json
@@ -4,17 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "migrate:generate": "sequelize migration:generate",
-    "migrate:up": "sequelize db:migrate",
-    "migrate:down": "sequelize db:migrate:undo",
-    "migrate:down:all": "sequelize db:migrate:undo:all",
-    "seed:generate": "sequelize seed:generate",
-    "seed:up": "sequelize db:seed:all",
-    "seed:down": "sequelize db:seed:undo",
-    "seed:down:all": "sequelize db:seed:undo:all",
-    "model:generate": "sequelize model:generate",
-    "create-db": "sequelize db:create"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
